fixing vusual bugs on tablet view

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -74,6 +74,7 @@
         width: 50dvw;
         min-width: 600px;
         height: 12dvh;
+        max-height: 150px;
         padding: 10px;
         border-radius: 80px;
         background-color: white;
